@@ -42,7 +42,7 @@ public class SparkDatasetRenderer implements Renderer {
     public void renderTo(ObjectNode bundle, Object object) {
         var resource = getClass().getSimpleName() + ".html";
         var map = Map.<String,Object>of("dataset", (Dataset) object, "view", 50);
-        var output = new ThymeleafTemplateRenderer.Output(getClass(), resource, "html", map);
+        var output = ThymeleafRenderer.process(getClass(), resource, "html", map);
 
         MAP.renderTo(bundle, output);
     }
