@@ -1,3 +1,9 @@
+2021-04-06  Allen D. Ball  <ball@hcf.dev>
+
+	* src/main/java/ganymede/server/renderer/ThymeleafRenderer.java,
+	src/main/java/ganymede/shell/magic/Thymeleaf.java:
+	Combined Renederer implementations into single ThymeleafRenderer.
+
 2021-04-05  Allen D. Ball  <ball@hcf.dev>
 
 	* src/main/java/ganymede/notebook/NotebookFunctions.java:
